- Register EXSLT extensions, so the world can be right again
* src/yelp-transform.c:
- Register EXSLT extensions, so the world can be right again

svn path=/trunk/; revision=2853

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-30  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-transform.c:
+	- Register EXSLT extensions, so the world can be right again
+
 2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>
 
         * configure.in: 
