Updated Spanish translation
svn path=/trunk/; revision=2854

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-31  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+	* POTFILES.in: added mising files
+
 2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* POTFILES.in: 
