--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-03  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>
+
+	* be@latin.po: Added Belarusian Latin translation.
+
 2007-08-01  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
