s/_Conteúdo/S_umário; see bug #461308.
2007-08-05  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

        * pt_BR.po: s/_Conteúdo/S_umário; see bug #461308.

svn path=/trunk/; revision=2861

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -931,7 +931,7 @@ msgstr "Pró_xima Seção"
 
 #: ../src/yelp-window.c:424
 #: ../src/yelp-window.c:456
-msgid "_Contents"
+msgid "S_umário"
 msgstr "_Conteúdo"
 
 #: ../src/yelp-window.c:430
@@ -1306,7 +1306,7 @@ msgstr "Obtenha ajuda sobre o GNOME"
 #~ msgstr "/Ir/_Início"
 #~ msgid "/Go/"
 #~ msgstr "/Ir/"
-#~ msgid "/Go/_Contents"
+#~ msgid "/Go/S_umário"
 #~ msgstr "/Ir/_Conteúdo da Ajuda"
 #~ msgid "A Help Browser for GNOME"
 #~ msgstr "Um Navegador de Ajuda para o GNOME"
