--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-05  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
+
+	* pt_BR.po: s/_Conteúdo/S_umário; see bug #461308.
+
 2007-08-03  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>
 
 	* be@latin.po: Added Belarusian Latin translation.
