--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-06  Priit Laes  <plaes@svn.gnome.org>
+
+	* et.po: Estonian translation update by Ivar Smolin.
+
 2007-08-05  Inaki Laranaga Murgoitio  <dooteo@zundan.com>
 
 	* eu.po: Updated Basque translation.
