--- a/po/et.po
+++ b/po/et.po
@@ -14,15 +14,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-07-31 04:05+0100\n"
-"PO-Revision-Date: 2007-07-31 21:39+0300\n"
+"POT-Creation-Date: 2007-08-01 08:07+0100\n"
+"PO-Revision-Date: 2007-08-02 13:48+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ../data/info.xml.in.h:1
+#: ../data/info.xml.in.h:1 ../src/yelp-toc-pager.c:2017
 msgid "GNU Info Pages"
 msgstr "GNU teabelehed"
 
@@ -66,7 +66,7 @@ msgstr "Riistvaraseadmed"
 msgid "Kernel Routines"
 msgstr "Kernelitoimingud"
 
-#: ../data/man.xml.in.h:10
+#: ../data/man.xml.in.h:10 ../src/yelp-toc-pager.c:2011
 msgid "Manual Pages"
 msgstr "Käsiraamatud"
 
@@ -76,19 +76,19 @@ msgstr "Network Audio Sound funktsioonid"
 
 #: ../data/man.xml.in.h:12
 msgid "OpenSSL Applications"
-msgstr "OpenSSL rakendused"
+msgstr "OpenSSL'i rakendused"
 
 #: ../data/man.xml.in.h:13
 msgid "OpenSSL Configuration"
-msgstr "OpenSSL sätted"
+msgstr "OpenSSL'i sätted"
 
 #: ../data/man.xml.in.h:14
 msgid "OpenSSL Functions"
-msgstr "OpenSSL funktsioonid"
+msgstr "OpenSSL'i funktsioonid"
 
 #: ../data/man.xml.in.h:15
 msgid "OpenSSL Overviews"
-msgstr "OpenSSL ülevaated"
+msgstr "OpenSSL'i ülevaated"
 
 #: ../data/man.xml.in.h:16
 msgid "Overviews"
@@ -560,6 +560,15 @@ msgstr "Abiteabe teemad"
 msgid "Document Sections"
 msgstr "Dokumendi jaotised"
 
+#: ../src/yelp-db-pager.c:239 ../src/yelp-db-print-pager.c:190
+#, c-format
+msgid ""
+"The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
+"not well-formed XML."
+msgstr ""
+"Faili „%s” pole võimalik analüüsida. Seda kas pole olema või on see valesti "
+"vormindatud XML."
+
 #. Much bigger problems
 #: ../src/yelp-db-print.c:258 ../src/yelp-db-print.c:350
 #: ../src/yelp-docbook.c:275 ../src/yelp-docbook.c:367 ../src/yelp-info.c:242
@@ -639,6 +648,15 @@ msgstr ""
 "Faili „%s” pole võimalik analüüsida kuna see pole korrektselt vormindatud "
 "teabeleht (info page)."
 
+#: ../src/yelp-info-pager.c:188
+#, c-format
+msgid ""
+"The file  ‘%s’ could not be parsed. Either the file does not exist, or it is "
+"not a well-formed info page."
+msgstr ""
+"Faili „%s” pole võimalik analüüsida. Seda kas pole olema või on see valesti "
+"vormindatud teabeleht (info page)."
+
 #: ../src/yelp-io-channel.c:107
 #, c-format
 msgid ""
@@ -673,6 +691,23 @@ msgstr ""
 "Faili „%s” pole võimalik analüüsida kuna see pole käsiraamatu korrektselt "
 "vormindatud leht (man page)."
 
+#: ../src/yelp-man-pager.c:263
+#, c-format
+msgid ""
+"The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
+"formatted incorrectly."
+msgstr ""
+"Faili „%s” pole võimalik analüüsida. Seda kas pole olema või on see valesti "
+"vormindatud."
+
+#: ../src/yelp-pager.c:117
+msgid "Document Information"
+msgstr "Dokumendi andmed"
+
+#: ../src/yelp-pager.c:118
+msgid "The YelpDocInfo struct of the document"
+msgstr "Dokumendi YelpDocInfo struktuur"
+
 #: ../src/yelp-print.c:167
 msgid "Preparing to print"
 msgstr "Printimise ettevalmistamine"
@@ -703,16 +738,16 @@ msgstr "Printimisel tekkis viga"
 msgid "It was not possible to print your document: %s"
 msgstr "Sinu dokumenti ei olnud võimalik printida: %s"
 
-#: ../src/yelp-search-parser.c:67
+#: ../src/yelp-search-parser.c:67 ../src/yelp-search-pager.c:71
 msgid "the GNOME Support Forums"
 msgstr "GNOME kasutajatoe foorumid"
 
-#: ../src/yelp-search-parser.c:273
+#: ../src/yelp-search-parser.c:273 ../src/yelp-search-pager.c:807
 #, c-format
 msgid "No results for \"%s\""
 msgstr "Tulemusi otsingule \"%s\" ei leitud"
 
-#: ../src/yelp-search-parser.c:274
+#: ../src/yelp-search-parser.c:274 ../src/yelp-search-pager.c:808
 msgid ""
 "Try using different words to describe the problem you're having or the topic "
 "you want help with."
@@ -720,7 +755,7 @@ msgstr ""
 "Proovi oma probleemi kirjeldamiseks või abiteabe otsimiseks kasutada veidi "
 "teistsuguseid sõnu."
 
-#: ../src/yelp-search-parser.c:277
+#: ../src/yelp-search-parser.c:277 ../src/yelp-search-pager.c:811
 #, c-format
 msgid "Search results for \"%s\""
 msgstr "Otsingu \"%s\" tulemused"
@@ -730,7 +765,7 @@ msgstr "Otsingu \"%s\" tulemused"
 #. * The %s is used to indicate where the name of the site (linked)
 #. * should be.  This is done in the XSLT
 #.
-#: ../src/yelp-search-parser.c:291
+#: ../src/yelp-search-parser.c:291 ../src/yelp-search-pager.c:828
 #, c-format
 msgid "Repeat the search online at %s"
 msgstr "Võrgust otsimise kordamine asukohas %s"
@@ -743,7 +778,7 @@ msgstr "Võrgust otsimise kordamine asukohas %s"
 #. * "how do I", and words for functional states like "not",
 #. * "work", and "broken".
 #.
-#: ../src/yelp-search-parser.c:838
+#: ../src/yelp-search-parser.c:838 ../src/yelp-search-pager.c:1286
 msgid ""
 "a:about:an:are:as:at:be:broke:broken:by:can:can't:dialog:dialogue:do:doesn't:"
 "doesnt:don't:dont:explain:for:from:get:gets:got:make:makes:not:when:has:have:"
@@ -761,7 +796,7 @@ msgstr ""
 #. * E.g. if the common prefix is re then the string would be
 #. * "re:"
 #.
-#: ../src/yelp-search-parser.c:854
+#: ../src/yelp-search-parser.c:854 ../src/yelp-search-pager.c:1302
 msgid "re"
 msgstr "eba"
 
@@ -772,7 +807,7 @@ msgstr "eba"
 #. * please use the strig NULL.  If there is only 1, please
 #. * add a colon at the end of the list
 #.
-#: ../src/yelp-search-parser.c:863
+#: ../src/yelp-search-parser.c:863 ../src/yelp-search-pager.c:1311
 msgid "ers:er:ing:es:s:'s"
 msgstr ""
 "am:ard:e:el:gil:gile:i:ik:is:istu:ja:jas:k:kas:ke:kene:kesi:kil:kile:kond:"
@@ -788,6 +823,35 @@ msgstr "Otsingut pole võimalik läbi viia"
 msgid "Bigger problems still"
 msgstr ""
 
+#: ../src/yelp-search-pager.c:755
+#, c-format
+msgid ""
+"Your search could not be processed. The file ‘%s’ is either missing or is "
+"not a valid XSLT stylesheet."
+msgstr ""
+"Otsingut pole võimalik töödelda. Faili „%s” kas pole olemas või pole see "
+"korrektne XSLT laaditabel."
+
+#: ../src/yelp-search-pager.c:905 ../src/yelp-toc-pager.c:2328
+#: ../src/yelp-transform.c:368 ../src/yelp-xslt-pager.c:364
+msgid "No href attribute found on yelp:document"
+msgstr "Ei leia href-atribuuti yelp:document pealt"
+
+#: ../src/yelp-search-pager.c:919 ../src/yelp-toc-pager.c:2341
+#: ../src/yelp-transform.c:382 ../src/yelp-xslt-pager.c:380
+#: ../src/yelp-xslt-pager.c:531
+msgid "Out of memory"
+msgstr "Mälu otsas"
+
+#: ../src/yelp-search-pager.c:960 ../src/yelp-toc-pager.c:2390
+msgid "Help Contents"
+msgstr "Abiteabe sisukord"
+
+#: ../src/yelp-search-pager.c:1516 ../src/yelp-toc-pager.c:635
+#, c-format
+msgid "Could not load the OMF file '%s'."
+msgstr "Tõrge OMF faili '%s' laadimisel."
+
 #: ../src/yelp-toc.c:267
 #, c-format
 msgid "The page %s was not found in the TOC."
@@ -802,6 +866,42 @@ msgid ""
 "The ‘TOC file could not be parsed because it is not a well-formed XML "
 "document."
 msgstr ""
+
+#: ../src/yelp-toc-pager.c:272
+msgid "YelpTocPager: Pause count is negative."
+msgstr "YelpTocPager: Pauside arv on negatiivne."
+
+#: ../src/yelp-toc-pager.c:383 ../src/yelp-toc-pager.c:2128
+#, c-format
+msgid ""
+"The table of contents could not be processed. The file ‘%s’ is either "
+"missing or is not a valid XSLT stylesheet."
+msgstr ""
+"Sisukorda pole võimalik töödelda. Faili „%s” pole olemas või pole see "
+"korrektne XSLT laaditabel."
+
+#: ../src/yelp-toc-pager.c:1114
+#, c-format
+msgid "Read man page for %s"
+msgstr "Loe %s käsiraamatut"
+
+#: ../src/yelp-toc-pager.c:1853
+#, c-format
+msgid "Read info page for %s"
+msgstr "Loe %s-i infolehte"
+
+#: ../src/yelp-toc-pager.c:1984
+#, c-format
+msgid ""
+"The table of contents could not be loaded. The file ‘%s’ is either missing "
+"or is not well-formed XML."
+msgstr ""
+"Sisukorda pole võimalik laadida. Fail ‘%s’ kas puudub või on valesti "
+"vormindatud XML'is."
+
+#: ../src/yelp-toc-pager.c:2006
+msgid "Command Line Help"
+msgstr "Käsurea abi"
 
 #: ../src/yelp-transform.c:80
 msgid "Invalid Stylesheet"
@@ -819,14 +919,6 @@ msgstr ""
 #: ../src/yelp-transform.c:113
 msgid "An unknown error occurred while attempting to transform the document."
 msgstr ""
-
-#: ../src/yelp-transform.c:368
-msgid "No href attribute found on yelp:document"
-msgstr "Ei leia href-atribuuti yelp:document pealt"
-
-#: ../src/yelp-transform.c:382
-msgid "Out of memory"
-msgstr "Mälu otsas"
 
 #: ../src/yelp-window.c:297
 msgid "_File"
@@ -1035,8 +1127,8 @@ msgid ""
 "The file ‘%s’ could not be read.  This file might be missing, or you might "
 "not have permissions to read it."
 msgstr ""
-"Faili „%s” ei ole loetav.  Seda võib mitte olemas olla või pole sul "
-"piisavaid selle lugemiseks."
+"Faili „%s” pole võimalik lugeda.  Seda kas pole olemas või pole sul selle "
+"lugemiseks piisavalt õiguseid."
 
 #. Note to translators: put here your name (and address) so it
 #. * will show up in the "about" box
@@ -1056,152 +1148,24 @@ msgstr "Yelp"
 msgid "A documentation browser and viewer for the Gnome Desktop."
 msgstr "Dokumentatsioonisirvija Gnome töölaua jaoks."
 
+#: ../src/yelp-xslt-pager.c:189
+#, c-format
+msgid ""
+"The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
+"improperly formatted."
+msgstr ""
+"Faili „%s” pole võimalik analüüsida. Seda kas pole olema või on see valesti "
+"vormindatud."
+
+#: ../src/yelp-xslt-pager.c:210 ../src/yelp-xslt-pager.c:223
+#, c-format
+msgid ""
+"The document ‘%s’ could not be processed. The file ‘%s’ is either missing, "
+"or it is not a valid XSLT stylesheet."
+msgstr ""
+"Dokumenti „%s” ei ole võimalik töödelda. Faili „%s” pole olemas või pole see "
+"korrektne XSLT laaditabel."
+
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Abistab GNOMEi kasutamisel"
-
-#~ msgid "Could not load the OMF file '%s'."
-#~ msgstr "Tõrge OMF faili '%s' laadimisel."
-
-#~ msgid "yelp-watermark-blockquote-201C"
-#~ msgstr "yelp-watermark-blockquote-201C"
-
-#~ msgid "YelpTocPager: Pause count is negative."
-#~ msgstr "YelpTocPager: Pauside arv on negatiivne."
-
-#~ msgid ""
-#~ "The table of contents could not be processed. The file ‘%s’ is either "
-#~ "missing or is not a valid XSLT stylesheet."
-#~ msgstr ""
-#~ "Sisukorda pole võimalik töödelda. Faili ‘%s’ kas on puudu või pole "
-#~ "tegemist korrektse XSLT laaditabeliga."
-
-#~ msgid "Read man page for %s"
-#~ msgstr "Loe %s käsiraamatut"
-
-#~ msgid "Read info page for %s"
-#~ msgstr "Loe %s-i infolehte"
-
-#~ msgid ""
-#~ "The table of contents could not be loaded. The file ‘%s’ is either "
-#~ "missing or is not well-formed XML."
-#~ msgstr ""
-#~ "Sisukorda pole võimalik laadida. Fail ‘%s’ kas puudub või on valesti "
-#~ "vormindatud XML'is."
-
-#~ msgid "Command Line Help"
-#~ msgstr "Käsurea abi"
-
-#~ msgid "The Uniform Resource Identifier for the file is invalid."
-#~ msgstr "Faili ressursiidentifikaator (URI) on vigane."
-
-#~ msgid ""
-#~ "The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
-#~ "actual file."
-#~ msgstr ""
-#~ "Ressursiidentifikaator (URI) ‘%s’ on vigane või ei viita see tegelikult "
-#~ "failile."
-
-#~ msgid "Man pages are not supported in this version."
-#~ msgstr "Käesolev versioon ei toeta käsiraamatuid"
-
-#~ msgid "GNU info pages are not supported in this version"
-#~ msgstr "Käesolev versioon ei toeta GNU infolehti"
-
-#~ msgid "Search is not supported in this version."
-#~ msgstr "Otsing ei ole käesolevas versioonis toetatud."
-
-#~ msgid ""
-#~ "SGML documents are no longer supported. Please ask the author of the "
-#~ "document to convert to XML."
-#~ msgstr ""
-#~ "SGML dokumendid ei ole enam toetatud. Palu dokumendi autoril see dokument "
-#~ "XML vormingusse ümber teisendada."
-
-#~ msgid ""
-#~ "A transformation context could not be created for the file ‘%s’. The "
-#~ "format may not be supported."
-#~ msgstr ""
-#~ "Ümberkujunduskonteksti faili '%s' jaoks pole võimalik luua. Võimalik, et "
-#~ "vorming ei ole toetatud."
-
-#~ msgid ""
-#~ "The section ‘%s’ does not exist in this document. If you were directed to "
-#~ "this section from a Help button in an application, please report this to "
-#~ "the maintainers of that application."
-#~ msgstr ""
-#~ "Peatükki ‘%s’ pole selles dokumendis olemas. Kui sind suunati siia "
-#~ "rakenduse Abiteabe nupult, siis palun teata sellest veast rakenduse "
-#~ "hooldajatele."
-
-#~ msgid ""
-#~ "The file ‘%s’ could not be parsed. Either the file does not exist, or it "
-#~ "is improperly formatted."
-#~ msgstr ""
-#~ "Faili ‘%s’ pole võimalik analüüsida. Seda kas pole olema või on see "
-#~ "valesti vormindatud."
-
-#~ msgid "<b>Printing</b>"
-#~ msgstr "<b>Printimine</b>"
-
-#~ msgid ""
-#~ "http://gnomesupport.org/forums/search.php?search_keywords=%s&search_cat=1"
-#~ msgstr ""
-#~ "http://gnomesupport.org/forums/search.php?search_keywords=%s&search_cat=1"
-
-#~ msgid "Pages"
-#~ msgstr "Lehed"
-
-#~ msgid "Generating PDF is not currently supported"
-#~ msgstr "PDF-ide tekitamine ei ole hetkel toetatud"
-
-#~ msgid ""
-#~ "You were trying to print to a printer using the \"%s\" driver.  This "
-#~ "program requires a PostScript printer driver."
-#~ msgstr ""
-#~ "Sa proovisid printida \"%s\" printeridraiveri abil. See programm vajab "
-#~ "PostScript-i toetavat printeridraiverit."
-
-#~ msgid "_From:"
-#~ msgstr "_Alates:"
-
-#~ msgid "Sets the start of the range of pages to be printed"
-#~ msgstr "Prinditavate lehtede vahemiku alguse määramine"
-
-#~ msgid "_To:"
-#~ msgstr "_kuni:"
-
-#~ msgid "Sets the end of the range of pages to be printed"
-#~ msgstr "Prinditavate lehtede vahemiku lõpu määramine"
-
-#~ msgid ""
-#~ "Could not display help for Yelp.\n"
-#~ "%s"
-#~ msgstr ""
-#~ "Yelp'i kohta pole abiteavet võimalik kuvada.\n"
-#~ "%s"
-
-#~ msgid "Library Functions"
-#~ msgstr "Teegifunktsioonid"
-
-#~ msgid "Administration"
-#~ msgstr "Haldus"
-
-#~ msgid "Other"
-#~ msgstr "Muud"
-
-#~ msgid "Multimedia"
-#~ msgstr "Multimeedia"
-
-#~ msgid "Yelp Factory"
-#~ msgstr "Yelp Factory"
-
-#~ msgid "Could not activate Yelp: '%s'"
-#~ msgstr "Yelp'i pole võimalik aktiveerida: '%s'"
-
-#~ msgid ""
-#~ "Your search could not be processed. There is no connection to the beagle "
-#~ "daemon."
-#~ msgstr ""
-#~ "Sinu otsingut pole võimalik töödelda. Beagle'i deemoniga ei ole ühendust "
-#~ "loodud."
