Added Changelog entries for sinhala
svn path=/trunk/; revision=2866

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-07  Danishka Navin  <danishka@gmail.com>
+
+	* LINGUAS: Added 'si' (Sinhala).
+	* si.po: Added Sinhala translation by Danishka Navin.
+
 2007-08-06  Priit Laes  <plaes@svn.gnome.org>
 
 	* et.po: Estonian translation update by Ivar Smolin.
