Remove forgotten c++ comment (bug #462813, hopefully)
* src/yelp-base.c: 
Remove forgotten c++ comment
(bug #462813, hopefully)

svn path=/trunk/; revision=2871

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-08-07  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* src/yelp-base.c: 
+	Remove forgotten c++ comment
+	(bug #462813, hopefully)
+	
 	* src/yelp-main.c: 
 	Mark -help contents for translation
 	(bug #450168 - Gabor Kelemen)
