--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2007-08-07  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* src/yelp-window.c:
+	Fix "info <page>" in search bar
+	
 	* src/yelp-man-parser.c: 
 	Handle malformed .so tags better
 	(bug #447107 - Matt Keenan)
