Move to new format in line with bkor's request Also, update my email
* src/yelp-geck-services.h:
* src/yelp-geck-services.cpp:
* src/yelp-print.c:
* src/yelp-print.h:
* MAINTAINERS:
Move to new format in line
with bkor's request
Also, update my email address

svn path=/trunk/; revision=2884

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2007-08-07  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* src/yelp-geck-services.h:
+	* src/yelp-geck-services.cpp:
+	* src/yelp-print.c:
+	* src/yelp-print.h:
+	* MAINTAINERS:
+	Move to new format in line
+	with bkor's request
+	Also, update my email address
+	
 	* src/yelp-window.c:
 	Add a "Phrase not found" message to
 	the search bar when the term isn't found.
