Updated Thai translation.
	* th.po: Updated Thai translation.


svn path=/trunk/; revision=2885

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2007-08-07  Danishka Navin  <danishka@gmail.com>
 
 	* LINGUAS: Added 'si' (Sinhala).
