updated ta translation
svn path=/trunk/; revision=2894

--- a/po/ta.po
+++ b/po/ta.po
@@ -1,4 +1,4 @@
-# translation of yelp.HEAD.po to TAMIL
+# translation of ta.po to
 # Tamil translation of Yelp.
 # Copyright (C) 2003 Yelp's Dinesh Nadarajah
 # This file is distributed under the same license as the Yelp package.
@@ -10,12 +10,12 @@
 # Dr.T.Vasudevan <agnihot3@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp.HEAD\n"
+"Project-Id-Version: ta\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-07-31 20:44+0100\n"
-"PO-Revision-Date: 2007-08-07 17:35+0530\n"
-"Last-Translator: Dr.T.Vasudevan <agnihot3@gmail.com>\n"
-"Language-Team: TAMIL <ubuntu-l10n-tam@lists.ubuntu.com>\n"
+"PO-Revision-Date: 2007-08-10 14:15+0530\n"
+"Last-Translator: \n"
+"Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
