--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,10 @@
+2007-08-13  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* POTFILES.in: 
+	* POTFILES.skip:
+	Move old files into POTFILES.skip,
+	where they belong
+
 2007-08-13  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
