--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,8 @@
 2007-08-13  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* POTFILES.skip:
+	Add yelp.desktop.in to make distcheck work
+	
 	* POTFILES.in: 
 	* POTFILES.skip:
 	Move old files into POTFILES.skip,
