--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
+==================== 2.19.90 ====================
+
 2007-08-13  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* configure.in:
+	* NEWS:
+	Bump to version 2.19.90
+	
 	* Makefile.am: 
 	s/yelp.desktop.in/yelp.desktop.in.in/
 	Fixes distcheck (1) - other is in po/ChangeLog
