--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-17  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation, by
+	         Andre Klapper <ak-47@gmx.net>
+
 2007-08-17  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
 	* fr.po: Updated French translation by Claude Paroz and Stéphane
