--- a/po/de.po
+++ b/po/de.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-08-17 16:41+0200\n"
-"PO-Revision-Date: 2007-08-17 16:42+0200\n"
-"Last-Translator: Andre Klapper <ak-47@gmx.net>\n"
+"PO-Revision-Date: 2007-08-17 16:46+0200\n"
+"Last-Translator: Hendrik Richter <hendrikr@gnome.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -818,14 +818,14 @@ msgstr ""
 
 #: ../src/yelp-transform.c:80
 msgid "Invalid Stylesheet"
-msgstr "Ungültiges Stylesheet"
+msgstr "Ungültige Stilvorlage"
 
 #: ../src/yelp-transform.c:81
 #, c-format
 msgid "The XSLT stylesheet ‘%s’ is either missing, or it is not valid."
 msgstr ""
-"Entweder existiert das XSLT-Stylesheet »%s« nicht, oder es ist kein gültiges "
-"XSLT-Stylesheet."
+"Entweder existiert die XSLT-Stilvorlage »%s« nicht, oder es ist keine "
+"gültige XSLT-Stilvorlage."
 
 #: ../src/yelp-transform.c:112
 msgid "Broken Transformation"
@@ -1079,7 +1079,7 @@ msgstr "Ein zentraler Sammelpunkt für Hilfedokumente des Gnome-Desktops."
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
-msgstr "Hilfe zu GNOME holen"
+msgstr "Hilfe zu GNOME erhalten"
 
 #~ msgid "An unknown error occured"
 #~ msgstr "Es ist ein unbekannter Fehler aufgetreten"
