- Make the icons respect the theme again
* configure.in:
* src/yelp-settings.c:
* src/yelp-settings.h:
- Make the icons respect the theme again

svn path=/trunk/; revision=2908

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-08-20  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	* src/yelp-settings.c:
+	* src/yelp-settings.h:
+	- Make the icons respect the theme again
+
 2007-08-17  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-settings.c:
