--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-23  Kenneth Nielsen  <k.nielsen81@gmail.com>
+
+	* da.po: Updated danish translation
+
 2007-08-21  Priit Laes  <plaes@svn.gnome.org>
 
 	* et.po: Estonian translation updates by Ivar Smolin <okul@linux.ee>
