--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-26  Raphael Higino  <raphaelh@svn.gnome.org>
+
+	* pt_BR.po: Corrected occurrences of '%s' to "%s".
+
 2007-08-26 Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
