--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-30  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-window.c:
+	- Use g_filename_to_uri to ensure file URIs are right, fixed broken figures
+
 2007-08-20  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
