Updated Occitan translation
svn path=/trunk/; revision=2919

--- a/po/oc.po
+++ b/po/oc.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: or\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-14 04:06+0100\n"
-"PO-Revision-Date: 2007-08-21 12:03+0200\n"
+"POT-Creation-Date: 2007-08-21 12:19+0100\n"
+"PO-Revision-Date: 2007-09-01 12:27+0200\n"
 "Last-Translator: Yannig MARCHEGAY <yannig@marchegay.org>\n"
 "Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
@@ -291,7 +291,7 @@ msgstr "Accessòris"
 
 #: ../data/toc.xml.in.h:3
 msgid "Applications for fun"
-msgstr ""
+msgstr "Aplicacions per se divertir"
 
 #: ../data/toc.xml.in.h:4
 msgid "Applications for manipulating or viewing graphics"
@@ -363,7 +363,7 @@ msgstr "Burèu"
 
 #: ../data/toc.xml.in.h:22
 msgid "Other Applications"
-msgstr ""
+msgstr "Autras aplicacions"
 
 #: ../data/toc.xml.in.h:23
 msgid "Other Documentation"
@@ -545,7 +545,7 @@ msgstr "Un favorit apelat %s existís ja per aquesta pagina."
 #: ../src/yelp-bookmarks.c:392
 #, c-format
 msgid "A bookmark titled <b>%s</b> already exists for this page."
-msgstr ""
+msgstr "Un favorit que s'apèla <b>%s</b> existís ja per aquesta pagina."
 
 #: ../src/yelp-bookmarks.c:405
 msgid "Help Topics"
@@ -560,7 +560,7 @@ msgstr "Seccions del document"
 #: ../src/yelp-info.c:337 ../src/yelp-man.c:292 ../src/yelp-man.c:387
 #: ../src/yelp-toc.c:266 ../src/yelp-toc.c:364
 msgid "Page not found"
-msgstr ""
+msgstr "Impossible de trobar la pagina"
 
 #: ../src/yelp-db-print.c:259 ../src/yelp-docbook.c:276 ../src/yelp-info.c:243
 #: ../src/yelp-man.c:293
@@ -583,7 +583,7 @@ msgstr "Impossible trobar lo fichièr"
 #: ../src/yelp-man.c:431
 #, c-format
 msgid "The file ‘%s’ does not exist."
-msgstr ""
+msgstr "Lo fichièr '%s' existís pas."
 
 #: ../src/yelp-db-print.c:406 ../src/yelp-db-print.c:418
 #: ../src/yelp-docbook.c:423 ../src/yelp-docbook.c:435 ../src/yelp-info.c:393
@@ -845,11 +845,11 @@ msgstr "Fenèstra _novèla"
 
 #: ../src/yelp-window.c:310
 msgid "Print This Document ..."
-msgstr ""
+msgstr "Estampar lo document..."
 
 #: ../src/yelp-window.c:315
 msgid "Print This Page ..."
-msgstr ""
+msgstr "Estampar la pagina..."
 
 #: ../src/yelp-window.c:320
 msgid "About This Document"
@@ -977,7 +977,7 @@ msgstr "Cargament..."
 
 #: ../src/yelp-window.c:587 ../src/yelp-window.c:639
 msgid "Unknown Page"
-msgstr ""
+msgstr "Pagina desconeguda"
 
 #: ../src/yelp-window.c:1001 ../src/yelp-window.c:1061
 #, c-format
@@ -986,7 +986,7 @@ msgstr ""
 
 #: ../src/yelp-window.c:1002 ../src/yelp-window.c:1062
 msgid "Unable to load page"
-msgstr ""
+msgstr "Impossible de cargar la pagina"
 
 #: ../src/yelp-window.c:1056
 msgid "Error executing \"gnome-open\""
@@ -1022,7 +1022,7 @@ msgstr "Recercar lo _precedent"
 
 #: ../src/yelp-window.c:1442
 msgid "Phrase not found"
-msgstr ""
+msgstr "Impossible de trobar la frasa"
 
 #: ../src/yelp-window.c:1569
 #, c-format
@@ -1035,7 +1035,9 @@ msgstr ""
 #. * will show up in the "about" box
 #: ../src/yelp-window.c:2389
 msgid "translator-credits"
-msgstr "La còla occitana de revirada d'Ubuntu, 2007 - ubuntu-l10n-oci@lists.ubuntu.com"
+msgstr ""
+"La còla occitana de revirada d'Ubuntu, 2007 - ubuntu-l10n-oci@lists.ubuntu."
+"com"
 
 #: ../src/yelp-window.c:2392
 msgid "Yelp"
@@ -1047,7 +1049,7 @@ msgstr "Un navegador e legidor de documentacion pel burèu GNOME."
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
-msgstr ""
+msgstr "Obténer d'ajuda amb GNOME"
 
 #~ msgid "An unknown error occured"
 #~ msgstr "I a agut una error desconeguda"
