2007-09-01 Jovan Naumovski <jovanna@svn.gnome.org> *mk.po: Updated Macedonian translation.
svn path=/trunk/; revision=2920

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-01  Jovan Naumovski  <jovan@lugola.net>
+ 
+ 	 * mk.po: Updated Macedonian translation.
+
 2007-08-26  Raphael Higino  <raphaelh@svn.gnome.org>
 
 	* pt_BR.po: Corrected occurrences of '%s' to "%s".
