C89 fixes from Jens Granseuer (bug #472489)
* src/yelp-debug.c:
* src/yelp-search-parser.c:
C89 fixes from Jens Granseuer (bug #472489)

svn path=/trunk/; revision=2925

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-09-03  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-debug.c:
+	* src/yelp-search-parser.c:
+	C89 fixes from Jens Granseuer (bug #472489)
+
 2007-08-30  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
