If mime type isn't detected, don't crash bug #472128 based on patch by
* src/yelp-utils.c:
If mime type isn't detected, don't crash
bug #472128 based on patch by Hans Petter Jansson

svn path=/trunk/; revision=2926

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-09-03  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* src/yelp-utils.c:
+	If mime type isn't detected, don't crash
+	bug #472128 based on patch by Hans Petter Jansson
+	
 	* src/yelp-debug.c:
 	* src/yelp-search-parser.c:
 	C89 fixes from Jens Granseuer (bug #472489)
