--- a/po/si.po
+++ b/po/si.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: si\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-08-07 04:05+0100\n"
-"PO-Revision-Date: 2007-08-07 11:40+0530\n"
+"PO-Revision-Date: 2007-09-05 16:50+0530\n"
 "Last-Translator: Danishka Navin <snavin@redhat.com>\n"
 "Language-Team: Sinhala <en@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -26,7 +26,6 @@ msgid "Traditional command line help (info)"
 msgstr ""
 
 #: ../data/man.xml.in.h:1
-
 msgid "Applications"
 msgstr "යෙදුම්"
 
@@ -51,7 +50,6 @@ msgid "FORTRAN Functions"
 msgstr ""
 
 #: ../data/man.xml.in.h:7 ../data/toc.xml.in.h:15
-
 msgid "Games"
 msgstr "ක්‍රිඩා"
 
@@ -89,7 +87,7 @@ msgstr ""
 
 #: ../data/man.xml.in.h:16
 msgid "Overviews"
-msgstr ""
+msgstr "දළ විශ්ලේෂණ"
 
 #: ../data/man.xml.in.h:17
 msgid "POSIX Functions"
@@ -284,18 +282,16 @@ msgid "X11 Overviews"
 msgstr ""
 
 #: ../data/toc.xml.in.h:1
-
 msgid "Accessibility"
 msgstr "පිවිසුම් හැකියාව"
 
 #: ../data/toc.xml.in.h:2
-
 msgid "Accessories"
 msgstr "උපාංග"
 
 #: ../data/toc.xml.in.h:3
 msgid "Applications for fun"
-msgstr ""
+msgstr "විනෝදය සඳහා යෙදුම්"
 
 #: ../data/toc.xml.in.h:4
 msgid "Applications for manipulating or viewing graphics"
@@ -330,7 +326,6 @@ msgid "Applications that support assistive technologies"
 msgstr ""
 
 #: ../data/toc.xml.in.h:12
-
 msgid "Desktop"
 msgstr "මූලික තිරය"
 
@@ -339,17 +334,14 @@ msgid "Documents specific to the KDE Desktop Environment"
 msgstr ""
 
 #: ../data/toc.xml.in.h:14
-
 msgid "Education"
 msgstr "අධ්‍යාපනිකපනික"
 
 #: ../data/toc.xml.in.h:16
-
 msgid "Graphics"
 msgstr "චිත්‍ර"
 
 #: ../data/toc.xml.in.h:17
-
 msgid "Internet"
 msgstr "අන්තර්ජාලය"
 
@@ -359,20 +351,19 @@ msgstr "KDE"
 
 #: ../data/toc.xml.in.h:19
 msgid "Learning applications"
-msgstr ""
+msgstr "අධ්‍යාපනික යෙදුම්"
 
 #: ../data/toc.xml.in.h:20
 msgid "Miscellaneous documents"
 msgstr ""
 
 #: ../data/toc.xml.in.h:21
-
 msgid "Office"
 msgstr "කාර්‍යාලිය"
 
 #: ../data/toc.xml.in.h:22
 msgid "Other Applications"
-msgstr ""
+msgstr "සෙසු යෙදුම්"
 
 #: ../data/toc.xml.in.h:23
 msgid "Other Documentation"
@@ -383,25 +374,22 @@ msgid "Panel Applets"
 msgstr ""
 
 #: ../data/toc.xml.in.h:25
-
 msgid "Programming"
 msgstr "කේතරචනය"
 
 #: ../data/toc.xml.in.h:26
-
 msgid "Scientific"
 msgstr "විද්‍යාත්මක"
 
 #: ../data/toc.xml.in.h:27
 msgid "Scientific Applications."
-msgstr ""
+msgstr "විද්‍යාත්මක යෙදුම්."
 
 #: ../data/toc.xml.in.h:28
 msgid "Sound &amp; Video"
 msgstr ""
 
 #: ../data/toc.xml.in.h:29
-
 msgid "System Tools"
 msgstr "පද්දති මෙවලම්"
 
@@ -438,7 +426,6 @@ msgid "Add Bookmark"
 msgstr ""
 
 #: ../data/ui/yelp.glade.h:4
-
 msgid "Bookmarks"
 msgstr "පිටු සළකුණු"
 
@@ -447,17 +434,14 @@ msgid "C_ase sensitive"
 msgstr ""
 
 #: ../data/ui/yelp.glade.h:6
-
 msgid "Find"
 msgstr "සොයන්න"
 
 #: ../data/ui/yelp.glade.h:7
-
 msgid "Open Location"
 msgstr "පිහිටීම විවෘත කරන්න"
 
 #: ../data/ui/yelp.glade.h:8
-
 msgid "Preferences"
 msgstr "අභිප්‍රේත"
 
@@ -474,7 +458,6 @@ msgid "_Browse with caret"
 msgstr ""
 
 #: ../data/ui/yelp.glade.h:12
-
 msgid "_Find:"
 msgstr "සොයන්න (_F):"
 
@@ -483,22 +466,18 @@ msgid "_Fixed width:"
 msgstr ""
 
 #: ../data/ui/yelp.glade.h:14
-
 msgid "_Location:"
 msgstr "පිහිටීම (_L):"
 
 #: ../data/ui/yelp.glade.h:15
-
 msgid "_Next"
 msgstr "මීළඟ (_N)"
 
 #: ../data/ui/yelp.glade.h:16
-
 msgid "_Previous"
 msgstr "පෙර (_P)"
 
 #: ../data/ui/yelp.glade.h:17
-
 msgid "_Title:"
 msgstr "සිරස්තලය: (_T)"
 
@@ -512,7 +491,7 @@ msgstr ""
 
 #: ../data/ui/yelp.glade.h:20
 msgid "_Wrap around"
-msgstr ""
+msgstr "වටා එතුම (_W)"
 
 #: ../data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
@@ -635,13 +614,12 @@ msgid ""
 msgstr ""
 
 #: ../src/yelp-db-print.c:765 ../src/yelp-docbook.c:784
-
 msgid "Unknown"
 msgstr "නොදන්නා"
 
 #: ../src/yelp-error.c:132 ../src/yelp-error.c:139
 msgid "Unknown Error"
-msgstr ""
+msgstr "හඳුනානොගත් දෝෂයකි"
 
 #: ../src/yelp-error.c:136 ../src/yelp-window.c:1560
 msgid "Could Not Read File"
@@ -685,7 +663,7 @@ msgstr ""
 
 #: ../src/yelp-main.c:376 ../yelp.desktop.in.in.h:2
 msgid "Help"
-msgstr ""
+msgstr "උදව්"
 
 #: ../src/yelp-man.c:460
 #, c-format
@@ -700,7 +678,6 @@ msgid ""
 msgstr ""
 
 #: ../src/yelp-pager.c:117
-
 msgid "Document Information"
 msgstr "ලේඛන තොරතුරු"
 
@@ -722,7 +699,6 @@ msgid "Printer %s does not support postscript printing."
 msgstr ""
 
 #: ../src/yelp-print.c:337 ../src/yelp-print.c:365
-
 msgid "Printing"
 msgstr "මුද්‍රණය"
 
@@ -908,27 +884,22 @@ msgid "An unknown error occurred while attempting to transform the document."
 msgstr ""
 
 #: ../src/yelp-window.c:297
-
 msgid "_File"
 msgstr "ගොනු (_F)"
 
 #: ../src/yelp-window.c:298
-
 msgid "_Edit"
 msgstr "සැකසුම් (_E)"
 
 #: ../src/yelp-window.c:299
-
 msgid "_Go"
 msgstr "යන්න (_G)"
 
 #: ../src/yelp-window.c:300
-
 msgid "_Bookmarks"
 msgstr "පිටු සළකුණු (_B)"
 
 #: ../src/yelp-window.c:301
-
 msgid "_Help"
 msgstr "උදව් (_H)"
 
@@ -946,19 +917,17 @@ msgstr ""
 
 #: ../src/yelp-window.c:319
 msgid "About This Document"
-msgstr ""
+msgstr "මෙම ලේඛණය පිළිබදව"
 
 #: ../src/yelp-window.c:324
 msgid "Open _Location"
 msgstr ""
 
 #: ../src/yelp-window.c:329
-
 msgid "_Close Window"
 msgstr "කවුළුව වසන්න (_C)"
 
 #: ../src/yelp-window.c:335
-
 msgid "_Copy"
 msgstr "පිටපත් කරන්න (_C)"
 
@@ -967,12 +936,10 @@ msgid "_Select All"
 msgstr ""
 
 #: ../src/yelp-window.c:346
-
 msgid "_Find..."
 msgstr "සොයන්න... (_F)"
 
 #: ../src/yelp-window.c:351
-
 msgid "Find Pre_vious"
 msgstr "පෙර සෙවුම (_x)"
 
@@ -981,7 +948,6 @@ msgid "Find previous occurrence of the word or phrase"
 msgstr ""
 
 #: ../src/yelp-window.c:356
-
 msgid "Find Ne_xt"
 msgstr "මීළඟ සෙවුම (_x)"
 
@@ -990,17 +956,14 @@ msgid "Find next occurrence of the word or phrase"
 msgstr ""
 
 #: ../src/yelp-window.c:361
-
 msgid "_Preferences"
 msgstr "අභිප්‍රේත (_P)"
 
 #: ../src/yelp-window.c:366
-
 msgid "_Reload"
 msgstr "ප්‍රතිපුරණය (_R)"
 
 #: ../src/yelp-window.c:378
-
 msgid "_Back"
 msgstr "පසු පසට (_B)"
 
@@ -1009,7 +972,6 @@ msgid "Show previous page in history"
 msgstr ""
 
 #: ../src/yelp-window.c:383
-
 msgid "_Forward"
 msgstr "ඉදිරියට (_F)"
 
@@ -1034,12 +996,10 @@ msgid "_Next Section"
 msgstr ""
 
 #: ../src/yelp-window.c:403 ../src/yelp-window.c:435
-
 msgid "_Contents"
 msgstr "අන්තර්ගත (_C)"
 
 #: ../src/yelp-window.c:409
-
 msgid "_Add Bookmark"
 msgstr "පිටු සළකුණු එක් කරන්න (_A)"
 
@@ -1048,7 +1008,6 @@ msgid "_Edit Bookmarks..."
 msgstr ""
 
 #: ../src/yelp-window.c:420
-
 msgid "_Open Link"
 msgstr "පුරුක විවෘත කරන්න (_O)"
 
@@ -1057,7 +1016,6 @@ msgid "Open Link in _New Window"
 msgstr ""
 
 #: ../src/yelp-window.c:430
-
 msgid "_Copy Link Address"
 msgstr "පුරුක් ලිපිනය පිටපත් කරන්න (_C)"
 
@@ -1066,7 +1024,6 @@ msgid "Help On this application"
 msgstr ""
 
 #: ../src/yelp-window.c:440
-
 msgid "_About"
 msgstr "සම්බන්ධව (_A)"
 
@@ -1079,13 +1036,12 @@ msgid "Help Browser"
 msgstr ""
 
 #: ../src/yelp-window.c:585 ../src/yelp-window.c:637 ../src/yelp-window.c:1611
-
 msgid "Loading..."
 msgstr "පුරණය වෙමින්..."
 
 #: ../src/yelp-window.c:586 ../src/yelp-window.c:638
 msgid "Unknown Page"
-msgstr ""
+msgstr "නොදන්නා පිටුව"
 
 #: ../src/yelp-window.c:1003 ../src/yelp-window.c:1061
 #, c-format
@@ -1101,7 +1057,6 @@ msgid "Error executing \"gnome-open\""
 msgstr ""
 
 #: ../src/yelp-window.c:1238
-
 msgid "_Search:"
 msgstr "සොයන්න (_S):"
 
@@ -1139,7 +1094,6 @@ msgstr ""
 #. Note to translators: put here your name (and address) so it
 #. * will show up in the "about" box
 #: ../src/yelp-window.c:2375
-
 msgid "translator-credits"
 msgstr "පරිවර්තන ස්තුතිය"
 
