Added entry for sinhala
svn path=/trunk/; revision=2929

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+
+2008-09-05  Danishka Navin  <danishka@gmail.com>
+
+	* si.po: Updated Sinhala translation by Danishka Navin.
+
 2007-09-05  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
