New tango-ified version
* data/icons/yelp-icon-big.png:
New tango-ified version

svn path=/trunk/; revision=2930

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-05  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* data/icons/yelp-icon-big.png:
+	New tango-ified version
+
 2007-09-03  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-utils.c:
