--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,6 @@
+2007-09-06  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
 
 2008-09-05  Danishka Navin  <danishka@gmail.com>
 
