--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2007-09-06  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* fr.po: Updated French translation.
+
 2007-09-06  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation
+        * es.po: Updated Spanish translation.
 
 2007-09-06  Kjartan Maraas  <kmaraas@gnome.org>
 
