--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-06  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2007-09-06  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
 	* fr.po: Updated French translation.
