--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-06  Priit Laes  <plaes@svn.gnome.org>
+
+	* et.po: Estonian translation updates by Ivar Smolin
+
 2007-09-06  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
