--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2007-09-06  Priit Laes  <plaes@svn.gnome.org>
 
 	* et.po: Estonian translation updates by Ivar Smolin
