Respect theme settings again
* stylesheets/toc2html.xsl:
* stylesheets/info2html.xsl:
* stylesheets/man2html.xsl:
Respect theme settings again

svn path=/trunk/; revision=2939

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-09-06  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* stylesheets/toc2html.xsl:
+	* stylesheets/info2html.xsl:
+	* stylesheets/man2html.xsl:
+	Respect theme settings again
+
 2007-09-05  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-transform.c: 
