- Pass the computed chunk depth to the stylesheets
* src/yelp-docbook.c:
- Pass the computed chunk depth to the stylesheets

svn path=/trunk/; revision=2940

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-06  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-docbook.c:
+	- Pass the computed chunk depth to the stylesheets
+
 2007-09-06  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* stylesheets/toc2html.xsl:
