--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2007-09-06  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
+	* nl.po: Translation updated by Wouter Bolsterlee.
+
 2007-09-06  Jovan Naumovski  <jovan@lugola.net>
- 
- 	 * mk.po: Updated Macedonian translation.
+
+	 * mk.po: Updated Macedonian translation.
 
 2007-09-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
@@ -20,7 +24,7 @@
 
 2007-09-06  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation.
+	* es.po: Updated Spanish translation.
 
 2007-09-06  Kjartan Maraas  <kmaraas@gnome.org>
 
@@ -35,7 +39,7 @@
 	* bg.po: Updated Bulgarian translation by
 	Alexander Shopov <ash@contact.bg>
 
-2007-09-03   Clytie Siddall <clytie@riverland.net.au>
+2007-09-03  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
 
@@ -83,7 +87,7 @@
 2007-08-17  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation, by
-	         Andre Klapper <ak-47@gmx.net>
+	Andre Klapper <ak-47@gmx.net>
 
 2007-08-17  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
@@ -245,7 +249,7 @@
 
 2006-12-07  Raivis Dejus  <orvils@gmail.com>
 
-        * lv.po: Updated Latvian Translation.
+* lv.po: Updated Latvian Translation.
 
 2006-12-1  Djihed Afifi <djihed@gmail.com> 
 
@@ -359,8 +363,8 @@
 
 2006-08-31  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
-        * zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
-        * zh_TW.po: Updated Traditional Chinese translation(Taiwan).
+	* zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
+	* zh_TW.po: Updated Traditional Chinese translation(Taiwan).
 
 2006-08-30  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
 
@@ -1701,7 +1705,7 @@
 
 	* et.po: Translation updated.
 
-2005-04-28   Kostas Papadimas <pkst@gnome.org>
+2005-04-28  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek translation
 
@@ -1952,7 +1956,7 @@
 
 	* es.po: Updated Spanish translation.
 
-2005-01-22   Funda Wang  <fundawang@linux.net.cn>
+2005-01-22  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
 
@@ -3058,11 +3062,11 @@
 
 	* sv.po: Updated Swedish translation.
 
-2003-12-20   Arkadiusz Lipiec <arkadiusz.lipiec@gazeta.pl>
+2003-12-20  Arkadiusz Lipiec <arkadiusz.lipiec@gazeta.pl>
 
 	* pl.po: Updated polish translation by GNOME PL Team
 
-2003-12-20   Vincent van Adrighem  <adrighem@gnome.org>
+2003-12-20  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Dutch translation updated by Tino Meinen.
 
@@ -3123,7 +3127,7 @@
 
 	* th.po: Updated Thai (th) translation.
 
-2003-12-04   Vincent van Adrighem  <adrighem@gnome.org>
+2003-12-04  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Dutch translation updated by Tino Meinen.
 
@@ -3131,7 +3135,7 @@
 
 	* lt.po: Updated Lithuanian translation.
 
-2003-12-03   Vincent van Adrighem  <adrighem@gnome.org>
+2003-12-03  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Dutch translation updated by Tino Meinen.
 
@@ -3174,7 +3178,7 @@
 
 	* el.po: Updated Greek translation.
 
-2003-10-24   Vincent van Adrighem  <adrighem@gnome.org>
+2003-10-24  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Dutch translation updated by Tino Meinen.
 
