Fixed Turkish translation
svn path=/trunk/; revision=2969

--- a/po/tr.po
+++ b/po/tr.po
@@ -570,7 +570,7 @@ msgstr "Sayfa bulunamadı"
 #: ../src/yelp-man.c:293
 #, c-format
 msgid "The page %s was not found in the document %s."
-msgstr "%s sayfası % belgesinde bulunamadı."
+msgstr "%s sayfası %s belgesinde bulunamadı."
 
 #: ../src/yelp-db-print.c:351 ../src/yelp-docbook.c:368 ../src/yelp-info.c:338
 #: ../src/yelp-man.c:388
@@ -829,7 +829,7 @@ msgstr "Belge dönüştürülmeye çalışılırken bilinmeyen bir hata oluştu.
 
 #: ../src/yelp-transform.c:372
 msgid "No href attribute found on yelp:document\n"
-msgstr "yelp:document üzerinde hiçbir href özniteliği bulunamadı"
+msgstr "yelp:document üzerinde hiçbir href özniteliği bulunamadı\n"
 
 #: ../src/yelp-transform.c:387
 msgid "Out of memory"
