--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+=== 2.20.0 ===
+
+2007-09-17  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* configure.in:
+	* NEWS:
+	Version 2.20.0
+
 2007-09-06  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
