--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,52 @@
+Changed in 2.20.0:
+------------------
+
+ * Jump to anchors in pages again
+ * Respect theme settings on TOC again
+ * Set automatic IDs on all divisions and respect chunk depth
+ * Various minor fixes and crashers - Hans Petter Jansson and 
+   	   	       	   	      Jens Granseuer
+ * New tangoified icon on TOC
+ * Fix broken figures in docbooks
+ * Better colour theming and icon support
+ * Updated translations:
+   * ar (Djihed Afifi)
+   * be@latin (Ihar Hrachyshka)
+   * bg (Alexander Shopov)
+   * ca (Gil Forcada)
+   * da (Kenneth Nielsen)
+   * de (Andre Klapper and Hendrik Richter)
+   * el (Nikos Charonitakis)
+   * es (Jorge Gonzalez)
+   * et (Ivar Smolin)
+   * eu (Inaki Larranaga Murgoitio)
+   * fi (Ilkka Tuohela)
+   * fr (Stéphane Raimbault and Claude Paroz)
+   * gu (Ankit Patel)
+   * hu (Gabor Kelemen)
+   * ja (Takeshi AIHANA)
+   * ko (Young-Ho Cha)
+   * lt (Gintautas Miliauskas)
+   * mk (Jovan Naumovski)
+   * nb (Kjartan Maraas)
+   * nl (Wouter Bolsterlee)
+   * pl (Artur Flinta)
+   * pt (Duarte Loreto)
+   * pt_BR (Og Maciel and Raphael Higino and Vladimir Melo)
+   * ru (Nickolay V. Shmyrev)
+   * si (Danishka Navin)
+   * sq (Laurent Dhima)
+   * sr (Danilo Šegan)
+   * sr@latin (Danilo Šegan)
+   * sv (Daniel Nylander
+   * ta (Tirumurthi Vasudevan)
+   * th (Theppitak Karoonboonyanan)
+   * tr (Fatih Erguven)
+   * uk (Maxim Dziumanenko)
+   * vi (Clytie Siddall)
+
+
+
 Changed in 2.19.90:
 -------------------
 
