Updated Bengali Translation
* bn.po: Updated Bengali Translation

svn path=/trunk/; revision=2973

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-18  Khandakar Mujahidul Islam  <suzan@bengalinux.org>
+
+	* bn.po: Updated Bengali Translation.
+
 2007-09-17  Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish translation from Fatih Erguven
