updated ta translation
svn path=/trunk/; revision=2974

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-19  I. Felix <ifelix@svn.gnome.org>
+
+	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
+
 2007-09-18  Khandakar Mujahidul Islam  <suzan@bengalinux.org>
 
 	* bn.po: Updated Bengali Translation.
