Updated Italian translation by Milo Casagrande.
2007-09-19  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation by	Milo Casagrande.


svn path=/trunk/; revision=2975

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-19  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation by	Milo Casagrande.
+
 2007-09-19  I. Felix <ifelix@svn.gnome.org>
 
 	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
