Fix NULL-checking of URI in slow search (bug #493751)
* src/yelp-search-parser.c: 
Fix NULL-checking of URI in slow search
(bug #493751)

svn path=/trunk/; revision=2985

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-07  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-search-parser.c: 
+	Fix NULL-checking of URI in slow search
+	(bug #493751)
+
 === 2.20.0 ===
 
 2007-09-17  Don Scorgie  <dscorgie@svn.gnome.org>
