Fix debug build (bug #492882)
* src/yelp-window.c: 
Fix debug build (bug #492882)

svn path=/trunk/; revision=2987

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2007-11-07  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-window.c: 
+	Fix debug build (bug #492882)
+	
+	* src/yelp-window.c: 
 	Fix stupidity in loading HTML docs
 	(bug #493594 - Matthias Clasen)
 
