Updated Belarusian Latin translation.
svn path=/trunk/; revision=2989

--- a/po/be@latin.po
+++ b/po/be@latin.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-09-13 02:11+0300\n"
+"POT-Creation-Date: 2007-11-08 21:39+0200\n"
 "PO-Revision-Date: 2007-09-13 02:12+0300\n"
 "Last-Translator: Ihar Hrachyshka <ihar.hrachyshka@gmail.com>\n"
 "Language-Team: Belarusian Latin <be-latin.open-tran.eu>\n"
@@ -443,7 +443,7 @@ msgstr "Adčyni pałažeńnie"
 
 #: ../data/ui/yelp.glade.h:8
 msgid "Preferences"
-msgstr "Pieravahi"
+msgstr "Nałady"
 
 #: ../data/ui/yelp.glade.h:9
 msgid "Re_name"
@@ -905,7 +905,7 @@ msgstr "Znajdzi nastupnaje supadzieńnie sa słovam ci vyrazam"
 
 #: ../src/yelp-window.c:362
 msgid "_Preferences"
-msgstr "_Pieravahi"
+msgstr "_Nałady"
 
 #: ../src/yelp-window.c:367
 msgid "_Reload"
