Updated Occitan translation
svn path=/trunk/; revision=2993

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-28  Yannig Marchegay <yannig@marchegay.org>
+
+	* oc.po: Updated Occitan translation.
+
 2007-11-25  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
 
         * ru.po: Updated Russian translation
