--- a/po/oc.po
+++ b/po/oc.po
@@ -11,14 +11,13 @@ msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-10-16 14:07+0200\n"
-"PO-Revision-Date: 2007-11-20 14:32+0100\n"
+"PO-Revision-Date: 2007-11-28 14:42+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);"
-"X-Generator: KBabel 1.11.4\n"
 
 #: ../data/info.xml.in.h:1
 msgid "GNU Info Pages"
@@ -810,7 +809,7 @@ msgstr ""
 
 #: ../src/yelp-transform.c:113
 msgid "An unknown error occurred while attempting to transform the document."
-msgstr ""
+msgstr "I a agut una error desconeguda al moment d'ensajar de transformar lo document."
 
 #: ../src/yelp-transform.c:372
 msgid "No href attribute found on yelp:document\n"
