--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,24 @@
+Changed in 2.21.1:
+------------------
+
+* Port to Rarian 0.8 series
+* Strip '#' and '?' from TOC URIs (bug #482290)
+* Fix debug build (bug #492882)
+* Fix HTML doc loading (bug #493594 - Matthias Clasen)
+* Fix slow search NULL checking (bug #493751)
+* Updated translations:
+  * ar (Djihed Afifi)
+  * be@latin.po (Ihar Hrachyshka)
+  * bn (Khandakar Mujahidul Islam)
+  * gl (Ignacio Casal Quinteiro)
+  * he (Yair Hershkovitz)
+  * it (Milo Casagrande)
+  * ko (Changwoo Ryu)
+  * oc (Yannig Marchegay)
+  * ru (Vasiliy Faronov)
+  * sl (Matej Urbančič)
+  * ta (Tirumurthi Vasudevan)
+
 Changed in 2.20.0:
 ------------------
 
