--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== 2.21.1 ===
+2007-12-03  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* configure.in:
+	* NEWS:
+	Version  2.21.1
+
 2007-11-27  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-toc.c:
